<resources>
    <string name="app_name">Place</string>
    <string name="Search">Tìm kiếm</string>
    <string name="take_picture">Take picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Người dùng</string>
    <string name="login">Đăng nhập</string>
    <string name="Login">Đăng nhập</string>
    <string name="user_name">tên đăng nhập</string>
    <string name="password">mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="fogot_password">Quên mật khẩu</string>
    <string name="add_avatar_place">Thêm ảnh đại diện</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="username_used">Tên đăng nhập đã được sử dung</string>
    <string name="password_false">Chiều dài từ 8 đến 22 kí tự</string>
    <string name="repassword_false">Bạn cần nhập đúng với ô mật khẩu</string>
    <string name="user_name_error_legth">Ít nhất 8 kí tự và không có khoảng trắng</string>
    <string name="requesting_to_server">Đang gửi yêu cầu lên server, vui lòng chờ</string>
    <string name="login_fail_username">Có thể bạn sai tên đăng nhập</string>
    <string name="login_fail_password">Có thể bạn sai mật khẩu</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="notification">Notification</string>
    <string name="name">Tên</string>
    <string name="requesting_name_error">Bạn cần nhập tên hiển thị</string>
    <string name="description">Description</string>
    <string name="input_description">Viết chú thích</string>
    <string name="where_are_you">Bạn đang ở đâu:</string>
    <string name="search">Tìm kiếm</string>
    <string name="post">Post</string>
    <string name="posting">Đăng upload</string>
    <string name="count_like">Lượt thích</string>
    <string name="send">Gửi</string>
    <string name="add_comment">viết bình luận...</string>
    <string name="comment">Bình luận</string>
    <string name="coppy">Sao chép</string>
    <string name="edit">Sửa</string>
    <string name="cancel">hủy</string>
    <string name="label">Copied Text</string>
    <string name="delete">xóa</string>
    <string name="control_place">Quản lí địa điểm</string>
    <string name="title_activity_maps">Map</string>
    <string name="des">Mô tả:</string>
    <string name="flow">Theo dõi:</string>
    <string name="checkin">Check in:</string>
    <string name="map">Bản đồ</string>
</resources>
