<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.Fragment.PlaceLogin.PlaceLoginFragment">

    <LinearLayout
        android:paddingTop="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16"
        android:paddingLeft="@dimen/margin_16"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_weight="0.3"
                android:background="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="0.3dp"/>
            <TextView
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:text="@string/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="0.3"
                android:background="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="0.3dp"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/placelogin_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/placelogin_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/placelogin_register"
                android:textSize="12sp"
                android:textColor="@color/blue_secondary"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="12sp"
                android:textColor="@color/blue_secondary"
                android:layout_alignParentRight="true"
                android:text="@string/fogot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/placelogin_login"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/Login"
            android:padding="@dimen/margin_8"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>