<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddBody.AddBodyUploadActivity">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.AddBody.AddBodyUploadActivity">

        <android.support.design.widget.AppBarLayout
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/addbody_toolbar"
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:fontFamily="monospace"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:hint="@string/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addbody_txt_desciption"
                    android:textSize="16sp"
                    android:maxLines="6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                app:cardCornerRadius="5dp"
                android:layout_margin="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:padding="@dimen/margin_8"
                        android:text="@string/where_are_you"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputLayout
                            android:layout_weight="0.9"
                            android:padding="@dimen/margin_8"
                            android:hint="@string/search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <AutoCompleteTextView
                                android:id="@+id/addbody_txt_place"
                                android:textSize="16sp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            android:id="@+id/addbody_img_getlocation"
                            android:src="@drawable/ic_location_black_24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_margin="@dimen/margin_8"
                            android:padding="@dimen/margin_8"
                            android:layout_width="32dp"
                            android:layout_height="32dp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_margin="@dimen/margin_8"
            app:cardCornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/addbody_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:id="@+id/upload_post"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_margin="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/margin_16"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/post"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>